--- a/form-accept.html
+++ b/form-accept.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ขอบคุณที่ตอบ</title>
+  <title>ตอบตกลง</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <main class="container">
-    <h1>😢 เข้าใจนะ ขอบคุณที่บอกตรงๆ</h1>
+    <h1>🎉 ดีใจมากเลยที่ตอบตกลง</h1>
     <form action="https://formspree.io/f/xnnvlkpj" method="POST">
       <label for="name">ชื่อของคุณ</label>
       <input type="text" id="name" name="name" placeholder="ชื่อของคุณ" required>
@@ -16,7 +16,7 @@
       <label for="email">อีเมลของคุณ</label>
       <input type="email" id="email" name="email" placeholder="อีเมลของคุณ" required>
 
-      <label for="message">มีอะไรอยากบอกไหม?</label>
+      <label for="message">อยากบอกอะไรเราบ้างไหม?</label>
       <textarea id="message" name="message" rows="5" placeholder="เขียนข้อความที่นี่..." required></textarea>
 
       <button type="submit" id="formbutton">ส่งข้อความ</button>
