--- a/form-accept.html
+++ b/form-accept.html
@@ -4,28 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <title>form-accept</title>
-  <link rel="stylesheet" href="style.css"> -->
+  <title>final-accept</title>
+  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <main class="container">
-    <h1>🎉 ดีใจมากเลยที่ตอบตกลง</h1>
-    <form action="https://formspree.io/f/xnnvlkpj" method="POST">
-      <!-- กรอกชื่อ -->
-      <label for="name">ชื่อของคุณ</label>
-      <textarea id="name" name="name" rows="1" placeholder="ชื่อของคุณ" required></textarea>
-
-      <!-- กรอกอีเมล -->
-      <label for="email">อีเมลของคุณ</label>
-      <textarea id="email" name="email" rows="1" placeholder="อีเมลของคุณ" required></textarea>
-
-      <label for="message">อยากบอกอะไรเราบ้างไหม?</label>
-      <textarea id="message" name="message" rows="5" placeholder="เขียนข้อความที่นี่..." required></textarea>
-
-      <button type="submit" id="formbutton">ส่งข้อความ</button>
-    </form>
-    <button id="nexttofinal" onclick="location.href = 'final-accept.html'"> เส็จรสิ้น </button>
+    <h1>💌 ขอบคุณที่ตอบนะ เรารู้สึกดีมากเลย!</h1> <!-- ข้อความสุดท้าย -->
+    <p class="description">การได้บอกความรู้สึกออกไปก็มีความหมายแล้ว ❤️</p>
+    <div style="margin-top: 40px;">
+      <button onclick="location.href='index.html'">กลับไปหน้าแรก</button>
+    </div>
   </main>
 </body>
 
