--- a/form-reject.html
+++ b/form-reject.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <title>form-reject</title>
-  <link rel="stylesheet" href="style.css"> -->
+  <title>form-reject</title>
+  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
