--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div><img src="cer_2.jpg" alt="รูปของรางวัล" class="img"></div> <!-- ใส่รูปภาพ cer -->
     <div><img src="cer_3.jpg" alt="รูปของเข็มแข่งขั้นทักษะ" class="img"></div> <!-- ใส่รูปภาพ cer -->
     <div class="btn-group">
-      <button onclick="location.href='form-accept.html'">ปฏิเสธ</button> <!-- ปุ่มที่เมื่อคลิก จะพาไปหน้า page1 -->
-      <button onclick="location.href='form-reject.html'">ตกลง</button>   <!-- ปุ่มที่เมื่อคลิก จะพาไปหน้า page2 -->
+      <button onclick="location.href='form-accept.html'">ตกลง</button> <!-- ปุ่มที่เมื่อคลิก จะพาไปหน้า page1 -->
+      <button onclick="location.href='form-reject.html'">ปฏิเศษ</button>   <!-- ปุ่มที่เมื่อคลิก จะพาไปหน้า page2 -->
     </div>
   </main>
 </body>
