--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"> <!-- กำหนดการเข้ารหัสตัวอักษรให้รองรับภาษาไทย -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- ทำให้หน้าเว็บแสดงผลได้ดีบนมือถือ -->
   <meta name ="theme-color" content = "#ffffff">
-  <title>บอกรัก</title>
+  <title>confessing</title>
   <link rel="icon" href="favicon.png" type="image/png">
   <link rel="stylesheet" href="style.css"> <!-- เชื่อมไปยังไฟล์ตกแต่ง -->
 </head>
